[gd_scene load_steps=10 format=2]

[ext_resource path="res://Interface/Theme_Main.tres" type="Theme" id=1]
[ext_resource path="res://Interface/Assets/retro-pixel-thick.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Interface/Game/WaveUI.gd" type="Script" id=3]
[ext_resource path="res://Interface/Game/Skip.gd" type="Script" id=4]
[ext_resource path="res://Interface/Assets/HopeGold.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=3]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=1]
resource_name = "Fade"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/CashCounter:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/CashCounter:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="WaveUI" type="MarginContainer"]
anchor_right = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = 38.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 310.0
margin_bottom = 58.0
mouse_filter = 2

[node name="Label" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
margin_right = 310.0
margin_bottom = 20.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 3 )
text = "Wave 1"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 310.0
margin_bottom = 40.0

[node name="Skip" type="Button" parent="VBoxContainer/CenterContainer"]
unique_name_in_owner = true
margin_left = 134.0
margin_right = 176.0
margin_bottom = 16.0
rect_min_size = Vector2( 42, 16 )
focus_mode = 0
theme = ExtResource( 1 )
enabled_focus_mode = 0
text = "Skip"
script = ExtResource( 4 )

[node name="CashCounter" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 44.0
margin_right = 310.0
margin_bottom = 58.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0.756863, 0.207843, 1 )
align = 1

[node name="ProgressLabel" type="Label" parent="."]
unique_name_in_owner = true
margin_right = 310.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "1/5"
align = 2
autowrap = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Animator" type="AnimationPlayer" parent="."]
anims/Fade = SubResource( 1 )
anims/RESET = SubResource( 2 )

[connection signal="pressed" from="VBoxContainer/CenterContainer/Skip" to="." method="_on_Skip_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
